:update deafult cfg file

--- a/cfg_default.ini
+++ b/cfg_default.ini
@@ -1,4 +1,6 @@
 [configurations]
-REDDIT_URL = 
-NEWSAPI_URL = 
+REDDIT_URL = https://www.reddit.com/r/news/search.json
+NEWSAPI_URL = https://newsapi.org/v2/everything
 NEWSAPI_API_KEY = 
+USERNAME = 
+PASSWORD = 
